# notetaker

./: .gitignore  pyproject.toml
cron_server/: Dockerfile  app.py  jobs.sqlite  requirements.txt
google_meet/: gmeet.py
google_meet/transcripts/: bd83cd6f-1005-45cd-8891-e0a3eba49994.txt
notetakers/: app.py  notification_headers.txt
notetakers/agent/: cleanup.py  rough.ipynb  rough.py.ipynb  summarizer.py
notetakers/calendars/: cron.py  google.py  utils.py
notetakers/google_meet/: gmeet.py  practice.ipynb
server/: Dockerfile  compose.yaml  meeting-audio.pcm  requirements.txt  start.sh
server/notetakers/: app.py
server/notetakers/agent/: cleanup.py  summarizer.py
server/notetakers/calendars/: google.py  utils.py
server/notetakers/google_meet/: black.y4m  gmeet.py  rough.ipynb
server/notetakers/zoom/: test.ipynb  zoom.py
server/zoom-sdk/: CMakeLists.txt  Dockerfile  compose.yaml  config.toml
server/zoom-sdk/src/: Config.cpp  Config.h  Zoom.cpp  Zoom.h  ZoomApi.cpp  main.cpp
server/zoom-sdk/src/raw_record/: ZoomSDKAudioRawDataDelegate.cpp
transcripts/: 80a3c671-149b-4b38-a05c-8a123f543302.txt  dc9428d0-7796-4ffb-8296-9ad5321f2895.txt
web/: package-lock.json  package.json  tailwind.config.ts
web/notetaker/: package-lock.json  package.json
web/src/app/: page.tsx
web/src/app/auth/: layout.tsx
web/src/app/error/: page.tsx  (+1 more)
web/src/components/: app-sidebar.tsx  ask-ai.tsx  dasbhboard-context-component.tsx  integrations.tsx  login-box.tsx  logout-button.tsx  meetings.tsx  nav-user.tsx  sidebar-context.tsx  signup-box.tsx  user-auth-form.tsx
(+11 files in other folders)
